all elements of about page, only need to be aligned correctly

--- a/src/_about-container.scss
+++ b/src/_about-container.scss
@@ -1,18 +1,183 @@
+
+.container {
+  display: flex;
+  align-content: flex-start;
+}
+
+.centered-heading {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Ubuntu Mono', monospace;
+  background-color: yellow;
+
+}
+
+.intro-heading {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Ubuntu Mono', monospace;
+  line-height: 32px;
+  background-color: #fff;
+  display: -webkit-inline-flex;
+  margin-left: 30px;
+
+  .animation {
+     margin-top: 400px;
+     background: green;
+
+
+  .panda{
+    top:40%;
+    left:43%;
+    height: 120px;
+    width: 80px;
+    background-color: white;
+    border:5px solid black;
+    border-radius: 30%;
+  }
+  
+  .face {
+    position: relative;
+    background-color: white;
+    border:5px solid black;
+    height:90px;
+    width:110px;
+    border-radius: 50%;
+    bottom: 30px;
+    right:20px;
+  }
+  
+  .ear-l, .ear-r {
+    position: relative;
+    background-color: black;
+    height:25px;
+    width: 40px;
+    border-radius: 0px 0px 40px 40px;
+  }
+  
+  .ear-l{
+    transform:rotate(145deg);
+    bottom: 13px;
+    right:8px;
+  }
+  
+  .ear-r{
+    transform:rotate(-145deg);
+    left:78px;
+    bottom:38px;
+  }
+  
+  .eye-l, .eye-r{
+    position: relative;
+    background-color: black;
+    width: 28px;
+    height:33px;
+    border-radius: 50%;
+  }
+  
+  .eye-l{
+    bottom:30px;
+    left:10px;
+    transform:rotate(25deg);
+  }
+  
+  .eye-r{
+    bottom:63px;
+    left:72px;
+    transform: rotate(-25deg);
+  }
+  
+  .eyeball{
+    position: relative;
+    top:8px;
+    left:7px;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background-color: white;
+  }
+  
+  .nose{
+    position: relative;
+    height: 8px;
+    width: 15px;
+    background-color: black;
+    border-radius: 15px;
+    bottom:65px;
+    left:48px;
+  }
+  
+  .hand-l, .hand-r{
+    position: relative;
+    width: 25px;
+    height: 43px;
+    background-color: black;
+    border-radius: 30px;
+  }
+  
+  .hand-l{
+    transform: rotate(90deg);
+    bottom:28px;
+    left:1px;
+    animation: wave 1.5s infinite;
+    transform-origin: top;
+  }
+  
+  @keyframes wave {
+    50%{
+      transform:rotate(120deg);
+    }
+  }
+  .hand-r{
+    transform: rotate(-90deg);
+    bottom: 92px;
+    left:108px;
+  }
+  
+  .leg-l, .leg-r{
+    position: relative;
+    background-color: black;
+    width: 17px;
+    height: 25px;
+    border-radius: 0px 0px 30px 30px;
+  }
+  
+  .leg-l{
+    bottom: 65px;
+    left:30px;
+  }
+  
+  .leg-r{
+    bottom: 90px;
+    left:65px;
+  }
+  
+  .shadow{
+    position: relative;
+    background-color: rgba(0,0,0,0.2);
+    height: 30px;
+    width: 100px;
+    border-radius: 50%;
+    bottom: 105px;
+    left:5px;
+    }
+  }
+}
+
 .about-container {
   display: flex;
   flex-wrap: wrap;
-  
+  display: inline-flex;
+  align-self: flex-end;
+
   
   p {
-    margin-top: auto;
     line-height: 32px;   
-    margin-bottom: 30px; 
     font-weight: lighter;  
     color: #fff;
     background: rgb(156, 152, 152);
     font-family: 'Lato', sans-serif;
     font-family: 'Ubuntu Mono', monospace;
-    float: right;
+   
+    
 
  .answer {
     text-indent: 100px;
@@ -21,21 +186,4 @@
 }
 
 
-.centered-heading {
-  text-align: center;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Ubuntu Mono', monospace;
-  margin-top: 80px;
-  margin-left: 200px;
-  margin-bottom: 20px;
-}
 
-
-.intro-heading {
-  margin-top: 20px;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Ubuntu Mono', monospace;
-  flex-wrap: wrap;
-  justify-content: center;
-
-}
